<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/app_name"
                android:textColor="@color/secondaryTextColor"
                android:textSize="50sp" />

            <!-- Country Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appName"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:textColorHint="@color/secondaryTextColor"
                android:theme="@style/TextLabel">


            </com.google.android.material.textfield.TextInputLayout>

            <!-- Username Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutCountry"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:textColorHint="@color/secondaryTextColor"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/lgn_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_login_user_name"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/secondaryTextColor"
                    android:hint="@string/login_hint_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusLeft="@id/lgn_email"
                    android:singleLine="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textColorHint="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutUsername"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:textColorHint="@color/secondaryTextColor"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/lgn_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_login_password"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/secondaryTextColor"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/secondaryTextColor"
                    android:textColorHint="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutPassword"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_background"
                    android:text="@string/login"
                    android:textColor="@color/secondaryTextColor" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/lgnForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/login_forgot_password"
                android:textSize="14dip"
                android:textStyle="normal|italic"
                android:textColor="@color/secondaryTextColor"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lgnForgotPassword"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/login_register"
                android:textColor="@color/secondaryTextColor"
                android:textSize="15dip" />


        </RelativeLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>