<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userRegCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/app_name"
                android:textColor="@color/secondaryTextColor"
                android:textSize="50sp" />

            <!-- Username Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appName"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:textColorHint="@color/secondaryTextColor"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/sup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_login_user_name"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/secondaryTextColor"
                    android:hint="@string/login_hint_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusLeft="@id/sup_email"
                    android:singleLine="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textColorHint="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutEmail"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:textColorHint="@color/secondaryTextColor"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/sup_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_login_password"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/secondaryTextColor"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/secondaryTextColor"
                    android:textColorHint="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutPassword"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:textColorHint="@color/secondaryTextColor"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/sup_ConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_login_password"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/secondaryTextColor"
                    android:hint="@string/user_register_hint_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/secondaryTextColor"
                    android:textColorHint="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/inputLayoutConfirmPassword"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_background"
                    android:text="@string/register"
                    android:textColor="@color/secondaryTextColor" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>